@@ -14,22 +14,23 @@
 package io.trino.type;
 
 import com.google.common.collect.ImmutableList;
-import com.google.common.collect.ImmutableSet;
 import io.trino.metadata.PolymorphicScalarFunctionBuilder;
 import io.trino.metadata.SqlScalarFunction;
 import io.trino.spi.function.Signature;
 import io.trino.spi.type.DecimalConversions;
 import io.trino.spi.type.DecimalType;
 
+import java.util.Set;
+
 import static io.trino.spi.function.OperatorType.CAST;
 import static io.trino.spi.type.Decimals.longTenToNth;
-import static io.trino.sql.analyzer.TypeSignatureTranslator.parseTypeSignature;
+import static io.trino.sql.analyzer.TypeDescriptorTranslator.parseTypeTemplate;
 
 public final class DecimalToDecimalCasts
 {
     public static final Signature SIGNATURE = Signature.builder()
-            .argumentType(parseTypeSignature("decimal(from_precision,from_scale)", ImmutableSet.of("from_precision", "from_scale")))
-            .returnType(parseTypeSignature("decimal(to_precision,to_scale)", ImmutableSet.of("to_precision", "to_scale")))
+            .argumentType(parseTypeTemplate("decimal(from_precision,from_scale)", Set.of(), Set.of("from_precision", "from_scale")))
+            .returnType(parseTypeTemplate("decimal(to_precision,to_scale)", Set.of(), Set.of("to_precision", "to_scale")))
             .build();
 
     // TODO: filtering mechanism could be used to return NoOp method when only precision is increased
